--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/script.js"></script>
   </head>
   <body>
-    <h1>Quita los extraños</h1>
+    <h1>Lista sin elementos extraños</h1>
     <ul id="list"></ul>
   </body>
 </html>
